# Phy

./: .gitignore  CMakeLists.txt  README.md  build.zig  flake.nix
include/: vector.h
shader/: fragment.glsl  vertex.glsl
src/: app.zig  camera.zig  main.c  render.zig  shader.zig  vector.c  window.zig
src/math/: vector3.zig
